--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </p>
 
               <a
-                href="Aryan.pdf"
+                href="AryanThakur.pdf"
                 download="AryanRajput"
                 class="delayExtraBigReveal"
               >
